--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@ body {
 p {
     font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-size: 18px;
-    line-height: 1.75;
+    line-height: 1.75em;
 }
 
 h1,
@@ -51,6 +51,10 @@ a:link {
 
 i {
     font-size: 28px;
+}
+
+img {
+    background-color: white;
 }
 
 
@@ -89,12 +93,17 @@ i {
 
 @media (max-width: 767px) {
     .topnav {
-        padding: 20px 10px;
+        background-color: #282828;
+        padding: 5px 0 20px;
+    }
+
+    .topnav a {
+        color: white;
     }
 
     .topnav h3 {
-        font-size: 36px;
-        margin-bottom: 15px;
+        font-size: 28px;
+        margin: 5px 5px 8px;
         text-align: center;
     }
 
@@ -107,20 +116,25 @@ i {
 
 /* Button Styles */
 
-.btn {
+.btn,
+.btn:focus,
+.btn:active {
     color: #282828;
     font-weight: 500;
     border-radius: 0;
-    border: 3px solid #282828;
+    border: 3px solid;
     background-color: transparent;
     height: 44px;
     width: 110px;
+    outline: none;
+    box-shadow: none;
 }
 
 .btn:hover {
+    color: white;
     background-position: left bottom;
     background-color: #0B80FB;
-    border: 3px solid #282828;
+    border-color: #282828;
     transition-timing-function: ease-in;
     transition-duration: .1s;
 }
@@ -129,6 +143,18 @@ i {
 .btn:active {
     outline: none !important;
     box-shadow: none;
+}
+
+@media (max-width: 767px) {
+    .btn,
+    .btn:focus,
+    .btn:active {
+        color: white;
+    }
+
+    .btn:hover {
+        border-color: white;
+    }
 }
 
 /* Masthead Styles */
@@ -242,70 +268,50 @@ i {
     .details img {
         margin: 25px auto 120px;
     }
-
-    .details p {}
 }
 
-/* Gallery Image Styles */
+/* Gallery Styles */
 
 .gallery {
-
-    margin-bottom: 80px;
+    padding: 140px 30px;
 }
 
-.gallery h2 {
-    margin-top: 40px;
+@media (max-width: 767px) {
+    .gallery {
+        padding: 180px 0px;
+    }
 }
 
 .gallery p {
-    margin-bottom: 40px;
+    margin: 0;
 }
 
-.gallery .mask {
-    height: 300px;
-    overflow: hidden;
-    position: relative;
+.gallery a,
+.gallery a:hover {
+    color: #282828;
+    font-weight: 500;
+    margin-left: 30px;
 }
 
-.gallery h5 {
-    text-align: left;
-    max-width: 75%;
-    color: white;
-    line-height: 1.5em;
-    position: absolute;
-    bottom: 5%;
-    left: 5%;
-    text-shadow: 0 0 20px #00000080;
-}
-
-.gallery h5:hover {
-    display: block !important;
-}
-
-.gallery img {
+.mask {
+    margin-top: 80px;
+    margin-bottom: 20px;
     width: 100%;
+    overflow: hidden;
+}
+
+.mask img {
+    width: 100%;
+    height: 100%;
+    transition: all .3s ease-in-out;
+    background-color: #808080;
+    background-position: center;
     background-size: cover;
-    transition-delay: 0.5s;
-    transition: all 0.8s ease;
 }
 
-.gallery img:hover {
-    transform: scale(1.05);
-}
-
-.gallery .col {
-    margin: 15px 0;
-}
-
-.services img {
-    width: 80%;
-}
-
-.work {
-    background-color: white;
-    height: 380px;
-    border-radius: 0;
-    /*box-shadow: 0px 2px 2px #28282840 !important;*/
+.mask:hover img {
+    transform: scale(1.1);
+    overflow: hidden;
 }
 
 /* Quote Styles */
