--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,59 @@ img {
     margin: 140px auto;
 }
 
+/* Curly Brace Style */
+
+.brace {
+    width: auto;
+    min-width: 35px;
+    padding-bottom: 20px;
+    font-size: 2em;
+    line-height: 2em;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    margin: 0 15px 15px;
+    border: none;
+    background-color: transparent;
+    background-image: radial-gradient(circle at 0 0, #282828 14.5px, #282828 15.5px, #282828 19.5px, #282828 20.5px),
+    radial-gradient(circle at 35px 0, #282828 14.5px, #282828 15.5px, #282828 19.5px, #282828 20.5px);
+    background-size: 35px 20px;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    text-transform: lowercase;
+    font-style: italic;
+    color: #282828;
+    filter: drop-shadow(0 1px 1px rgba(black, .15));
+    overflow: visible;
+}
+
+.brace:before {
+    width: 50%;
+    border-top: 5px solid #282828;
+    border-left: 1px solid transparent;
+    /* play with this until you like the look of it */
+    border-top-left-radius: 20% 30px;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: -15px;
+    box-sizing: border-box;
+    margin-top: -5px;
+}
+
+.brace:after {
+    width: 50%;
+    border-top: 5px solid #282828;
+    border-right: 1px solid transparent;
+    /* play with this until you like the look of it */
+    border-top-right-radius: 20% 30px;
+    height: 100%;
+    content: "";
+    position: absolute;
+    top: -15px;
+    box-sizing: border-box;
+    margin-top: -5px;
+}
 
 /* Topnav Styles */
 
@@ -134,6 +187,11 @@ img {
     width: 110px;
 }
 
+.btn-big {
+    padding: 15px;
+    margin: 80px auto 120px;
+}
+
 
 .btn:hover {
     color: white;
@@ -195,7 +253,6 @@ img {
 
 @media (max-width: 767px) {
     .jumbotron {
-        margin-top: 168px;
         min-height: auto;
     }
 
@@ -242,7 +299,7 @@ img {
 }
 
 .outcomes {
-    border-left: 6px solid #808080;
+    border-left: 6px solid #282828;
     padding: 22px 0 0 40px;
 }
 
@@ -270,6 +327,16 @@ img {
 }
 
 @media (max-width: 767px) {
+    .details {
+        padding: 0;
+    }
+
+    .details h3,
+    h4,
+    h5 {
+        margin-left: 0;
+    }
+
     .details img {
         margin: 25px auto 120px;
     }
@@ -331,7 +398,7 @@ img {
 /* Services Styles */
 
 .headline {
-    margin: 120px 0;
+    margin: 140px 0;
 }
 
 .headline h1 {
