--- a/styles/styles.css
+++ b/styles/styles.css
@@ -405,9 +405,27 @@ img {
     margin: 30px 0 0;
 }
 
+@media (max-width: 767px) {
+    .headline {
+        margin: 60px 0
+    }
+
+    .headline h1 {
+        font-size: 34px;
+    }
+
+    .headline p {
+        font-size: 18px;
+    }
+}
+
 .services img {
     max-width: 120px;
-    margin: 0;
+    margin: 0 0 18px;
+}
+
+.services h5 {
+    line-height: 2em;
 }
 
 .services p {
@@ -416,7 +434,7 @@ img {
 
 @media (max-width: 767px) {
     .services {
-        padding: 170px 0px 60px;
+        padding: 60px 0px;
     }
 }
 
@@ -483,22 +501,28 @@ img {
 }
 
 @media (max-width: 768px) {
-    .next {
+    .next,
+    .footer {
         padding: 20px;
+        margin: 0px;
     }
 
     .next p,
-    .next h3 {
+    .next h3,
+    .footer p,
+    .footer h3 {
         margin: 0 !important;
         padding: 0;
         line-height: 1.4em;
     }
 
-    .next h3 {
+    .next h3,
+    .footer h3 {
         font-size: 24px;
     }
 
-    .next i {
+    .next i,
+    .footer i {
         display: none;
     }
 }
