--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,6 @@ body {
 
 .background {
     min-height: 100%;
-    background-color: #181818;
     padding: 0px;
 }
 
@@ -21,22 +20,25 @@ body {
 }
 
 p {
-    font-family: 'Open Sans', 'Helvetica', sans-serif;
+    font-family: 'Open+Sans', 'Helvetica', sans-serif;
+    font-weight: 200;
     font-size: 18px;
     line-height: 1.75em;
+    color:#464646;
 }
 
 h1,
-h2,
+h2, 
 h3,
 h4,
 h5,
 h6 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Poppins', 'Helvetica', sans-serif;
+    font-weight: 300;
     line-height: 1.5em;
-    text-transform: uppercase;
 }
+
+
 
 .vertical-align {
     display: flex;
@@ -47,7 +49,6 @@ a:link {
     text-decoration: none;
     padding: 0;
 }
-
 
 i {
     font-size: 28px;
@@ -287,6 +288,7 @@ img[data-src] {
     }
 }
 
+
 /* Summary Styles */
 
 .summary,
@@ -375,7 +377,7 @@ img[data-src] {
 .mask img {
     width: 100%;
     height: 100%;
-    transition: all .3s ease-in-out;
+    transition: all .4s ease-in-out;
     background-color: #808080;
     background-position: center;
     background-size: cover;
@@ -401,20 +403,21 @@ img[data-src] {
     }
 }
 
-/* Services Styles */
+/* Headline Styles */
 
 .headline {
-    margin: 140px 0;
+    margin: 225px 100px 150px;
 }
 
 .headline h1 {
     font-size: 52px;
+    margin-bottom:  80px;
 }
 
 .headline p {
     font-size: 24px;
-    line-height: 2em;
-    margin: 30px 0 0;
+    line-height: 2.5em;
+    color: #606060;
 }
 
 @media (max-width: 767px) {
@@ -422,34 +425,37 @@ img[data-src] {
         margin: 60px 0
     }
 
-    .headline h1 {
-        font-size: 34px;
-    }
-
     .headline p {
         font-size: 18px;
     }
 }
 
+
+/* Services Styles */
+
+.service {
+    padding: 50px 35px;
+}
+
+.service h3 {
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+
 .services img {
-    max-width: 120px;
-    margin: 0 0 18px;
+    max-width: 100px;
 }
 
 .services h5 {
     line-height: 2em;
 }
 
-.services p {
-    margin-bottom: 80px;
-}
 
 @media (max-width: 767px) {
-    .services {
-        padding: 60px 0px;
+    .service {
+        padding: 40px 100px;
     }
 }
-
 
 /* Quote Styles */
 
@@ -558,11 +564,6 @@ a .next:hover {
         margin: 0 !important;
         padding: 0;
         line-height: 1.4em;
-    }
-
-    .next h3,
-    .footer h3 {
-        font-size: 24px;
     }
 
     .next i,
