--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@ body {
 
 .background {
     min-height: 100%;
+    background-color: #181818;
     padding: 0px;
 }
 
@@ -20,25 +21,22 @@ body {
 }
 
 p {
-    font-family: 'Open+Sans', 'Helvetica', sans-serif;
-    font-weight: 200;
+    font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 1.75em;
-    color:#464646;
 }
 
 h1,
-h2, 
+h2,
 h3,
 h4,
 h5,
 h6 {
-    font-family: 'Poppins', 'Helvetica', sans-serif;
-    font-weight: 300;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     line-height: 1.5em;
+    text-transform: uppercase;
 }
-
-
 
 .vertical-align {
     display: flex;
@@ -49,6 +47,7 @@ a:link {
     text-decoration: none;
     padding: 0;
 }
+
 
 i {
     font-size: 28px;
@@ -130,7 +129,7 @@ img[data-src] {
 /* Topnav Styles */
 
 .topnav {
-    padding: 50px 50px;
+    padding: 15px 10px;
     align-items: center;
     background: white;
     margin: 0;
@@ -160,7 +159,7 @@ img[data-src] {
 @media (max-width: 767px) {
     .topnav {
         background-color: #282828;
-        padding: 20px 0 20px;
+        padding: 5px 0 20px;
     }
 
     .topnav a {
@@ -288,7 +287,6 @@ img[data-src] {
     }
 }
 
-
 /* Summary Styles */
 
 .summary,
@@ -377,7 +375,7 @@ img[data-src] {
 .mask img {
     width: 100%;
     height: 100%;
-    transition: all .4s ease-in-out;
+    transition: all .3s ease-in-out;
     background-color: #808080;
     background-position: center;
     background-size: cover;
@@ -403,21 +401,20 @@ img[data-src] {
     }
 }
 
-/* Headline Styles */
+/* Services Styles */
 
 .headline {
-    margin: 150px 100px 150px;
+    margin: 140px 0;
 }
 
 .headline h1 {
     font-size: 52px;
-    margin-bottom:  80px;
 }
 
 .headline p {
     font-size: 24px;
-    line-height: 2.5em;
-    color: #606060;
+    line-height: 2em;
+    margin: 30px 0 0;
 }
 
 @media (max-width: 767px) {
@@ -425,37 +422,34 @@ img[data-src] {
         margin: 60px 0
     }
 
+    .headline h1 {
+        font-size: 34px;
+    }
+
     .headline p {
         font-size: 18px;
     }
 }
 
-
-/* Services Styles */
-
-.service {
-    padding: 50px 35px;
-}
-
-.service h3 {
-    font-weight: 400;
-    margin-bottom: 20px;
-}
-
 .services img {
-    max-width: 100px;
+    max-width: 120px;
+    margin: 0 0 18px;
 }
 
 .services h5 {
     line-height: 2em;
 }
 
+.services p {
+    margin-bottom: 80px;
+}
 
 @media (max-width: 767px) {
-    .service {
-        padding: 40px 100px;
+    .services {
+        padding: 60px 0px;
     }
 }
+
 
 /* Quote Styles */
 
@@ -564,6 +558,11 @@ a .next:hover {
         margin: 0 !important;
         padding: 0;
         line-height: 1.4em;
+    }
+
+    .next h3,
+    .footer h3 {
+        font-size: 24px;
     }
 
     .next i,
