--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,12 +7,10 @@ body {
 
 .background {
     min-height: 100%;
-    background-color: #181818;
     padding: 0px;
 }
 
 .wrapper {
-    background-color: white;
     margin: 0 auto;
     padding: 0;
     overflow: hidden;
@@ -24,6 +22,7 @@ p {
     font-family: 'Open Sans', 'Helvetica', sans-serif;
     font-size: 18px;
     line-height: 1.75em;
+    font-weight: 400;
 }
 
 h1,
@@ -32,11 +31,37 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-family: 'Poppins', 'Helvetica', sans-serif;
     line-height: 1.5em;
-    text-transform: uppercase;
 }
+
+h1 {
+    font-weight: 600;
+}
+
+h3 {
+    font-weight: 400;
+    max-width:  1000px;
+    margin: 0 auto;
+}
+
+.services h3,
+.gallery h3 {
+    margin-bottom: 80px;
+    margin-top:  100px;
+}
+
+.gallery h4 {
+    margin-bottom:  40px;
+}
+
+.gallery {
+    margin-bottom:  80px;
+}
+
+h5 {font-weight: 600;
+}
+
 
 .vertical-align {
     display: flex;
@@ -57,9 +82,6 @@ i {
 
 img {
     background-color: white;
-}
-
-img {
     opacity: 1;
     transition: opacity 0.3s;
 }
@@ -71,6 +93,11 @@ img[data-src] {
 .separator {
     margin: 140px auto;
 }
+
+.headline {
+    padding:  120px 0;
+}
+
 
 /* Curly Brace Style */
 
@@ -129,7 +156,7 @@ img[data-src] {
 /* Topnav Styles */
 
 .topnav {
-    padding: 15px 10px;
+    padding: 30px 30px;
     align-items: center;
     background: white;
     margin: 0;
@@ -143,7 +170,6 @@ img[data-src] {
 .topnav a {
     color: #282828;
     font-weight: 500;
-    margin-left: 30px;
 }
 
 .topnav a:hover {
@@ -155,6 +181,7 @@ img[data-src] {
 .topnav .nav-links {
     float: right;
 }
+
 
 @media (max-width: 767px) {
     .topnav {
@@ -295,6 +322,11 @@ img[data-src] {
     padding: 80px;
 }
 
+.summary h4 {
+    font-weight:  600;
+    padding:  15px 0 20px;
+}
+
 @media (max-width: 767px) {
     .summary,
     .details {
@@ -311,7 +343,7 @@ img[data-src] {
 
 .outcomes {
     border-left: 6px solid #282828;
-    padding: 22px 0 0 40px;
+    padding: 15px 0px 0px 30px;
 }
 
 .outcomes h1,
@@ -321,6 +353,7 @@ img[data-src] {
 }
 
 .outcomes p {
+    font-weight:  500;
     line-height: 1.6em;
     margin-bottom: 10px;
 }
@@ -350,9 +383,6 @@ img[data-src] {
 
 /* Gallery Styles */
 
-.gallery {
-    padding: 0px 30px 100px;
-}
 
 .gallery p {
     margin: 0;
@@ -366,7 +396,6 @@ img[data-src] {
 }
 
 .mask {
-    margin-top: 60px;
     margin-bottom: 15px;
     width: 100%;
     overflow: hidden;
@@ -401,21 +430,12 @@ img[data-src] {
     }
 }
 
-/* Services Styles */
-
-.headline {
-    margin: 140px 0;
-}
+/* Headline Styles */
 
 .headline h1 {
     font-size: 52px;
 }
 
-.headline p {
-    font-size: 24px;
-    line-height: 2em;
-    margin: 30px 0 0;
-}
 
 @media (max-width: 767px) {
     .headline {
@@ -431,17 +451,22 @@ img[data-src] {
     }
 }
 
+/* Services Styles */
+
 .services img {
     max-width: 120px;
-    margin: 0 0 18px;
+    margin-bottom: 20px;
 }
 
 .services h5 {
+    font-weight: 500;
     line-height: 2em;
 }
 
-.services p {
-    margin-bottom: 80px;
+.service {
+    padding:  25px;
+    border-radius: 20px;
+    margin: 0px 20px 20px;
 }
 
 @media (max-width: 767px) {
@@ -488,13 +513,6 @@ img[data-src] {
     }
 }
 
-/* Clients Styles */
-
-.clients {
-    background-color: #F9f9f9;
-    padding: 50px;
-    margin: 0;
-}
 
 /* Next Proj Styles */
 
