--- a/styles/styles.css
+++ b/styles/styles.css
@@ -287,6 +287,7 @@ img[data-src] {
     color: #fff;
     text-shadow: 0 0 30px #00000090;
     line-height: 1.2em;
+    text-transform: capitalize;
 }
 
 @media (max-width: 767px) {
