--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,7 +98,7 @@ img[data-src] {
 
 @media (max-width: 767px) {
     .headline {
-        padding:  80px 0 20px;
+        padding:  80px 20px 20px;
     }
 
     h3 {
@@ -313,10 +313,12 @@ img[data-src] {
 @media (max-width: 767px) {
     .jumbotron {
         min-height: auto;
+        box-shadow: inset 0 -75px 75px -75px #000000;
     }
 
     .jumbotron h4 {
         margin-top: 10px !important;
+        text-shadow: 0 0 5px #00000090;
     }
 
     .jumbotron h4,
