--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,7 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Poppins', 'Helvetica', sans-serif;
+    font-family: 'Poppins', 'Open Sans', 'Helvetica', sans-serif;
     line-height: 1.5em;
 }
 
