--- a/styles/styles.css
+++ b/styles/styles.css
@@ -364,7 +364,7 @@ img[data-src] {
 
 .summary h4 {
     font-weight:  600;
-    padding:  15px 0 20px;
+    margin:  .7em 0;
 }
 
 @media (max-width: 767px) {
@@ -383,7 +383,7 @@ img[data-src] {
 
 .outcomes {
     border-left: 6px solid #282828;
-    padding: 15px 0px 0px 30px;
+    padding: 0px 0px 1em 30px;
 }
 
 .outcomes h1,
@@ -411,7 +411,7 @@ img[data-src] {
 }
 
 .outcomes h5 {
-    margin-bottom:  10px;
+    margin:  1em 0;
 }
 
 @media (max-width: 767px) {
